<resources>
    <string name="app_name">Eğitim Noktası</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_profil">Profil</string>
    <string name="menu_sorular">Sorular</string>
    <string name="menu_bildirim">Bildirim</string>
    <string name="menu_siralama">Siralama</string>
    <string name="menu_takip">Takip edilen sorular</string>
    <string name="odul">Ödüllerim</string>
    <string name="gorev">Görevler</string>
    <string name="ulas">Bize Ulaşın</string>
    <string name="ayarlar">Ayarlar</string>
    <string name="cıkıs">Çıkış Yap</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>